# Nitido

./: AUTHORS  COMPILING  COMPILING~  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ease.doap
data/: Makefile.am  Makefile.in  ease-mime.xml  ease.desktop.in  theme-defaults.json
data/themes/Black/: Theme.json
data/themes/Blue/: Theme.json
data/themes/Goddard/: Theme.json
data/themes/Green/: Theme.json
data/themes/Red/: Theme.json
data/themes/Shaded/: Theme.json
data/themes/White/: Theme.json
data/ui/: background.ui  editor-window.ui  import-widget.ui  inspector-element-image.ui  inspector-element-none.ui  inspector-element-pdf.ui  inspector-element-shape.ui  inspector-element-text.ui  inspector-element-video.ui  inspector-slide.ui  progress-dialog.ui  welcome-window.ui
ease/: Makefile.am  Makefile.in  ease-about-dialog.c  ease-about-dialog.vala  ease-close-confirm-dialog.c  ease-close-confirm-dialog.vala  ease-editor-embed.c  ease-editor-embed.vala  ease-editor-window.c  ease-editor-window.vala  ease-handle.c  ease-handle.vala  ease-import-dialog.c  ease-import-dialog.vala  ease-import-flickr-media.c  ease-import-flickr-media.vala  ease-import-flickr-service.c  ease-import-flickr-service.vala  ease-import-oca-media.c  ease-import-oca-media.vala  ease-import-oca-service.c  ease-import-oca-service.vala  ease-import-widget.c  ease-import-widget.vala  ease-inspector-element-pane.c  ease-inspector-element-pane.vala  ease-inspector-pane.c  ease-inspector-pane.vala  ease-inspector-slide-pane.c  ease-inspector-slide-pane.vala  ease-inspector-transition-pane.c  ease-inspector-transition-pane.vala  ease-inspector.c  ease-inspector.vala  ease-main.c  ease-main.vala  ease-player.c  ease-player.vala  ease-scrollable-embed.c  ease-scrollable-embed.vala  (+12 more)
ease-core/: Makefile.am  Makefile.in  ease-actor.c  ease-actor.vala  ease-animated-zoom-slider.c  ease-animated-zoom-slider.vala  ease-archiver.c  ease-archiver.vala  ease-background-widget.c  ease-background-widget.vala  ease-background.c  ease-background.vala  ease-cairo-actor.c  ease-cairo-actor.vala  ease-cairo-element.c  ease-cairo-element.vala  ease-color.c  ease-color.vala  ease-core.h  ease-dialog-progress.c  ease-dialogs.c  ease-dialogs.vala  ease-document.c  ease-document.vala  ease-element.c  ease-element.vala  ease-enums.c  ease-enums.vala  ease-gradient.c  ease-gradient.vala  ease-html-exporter.c  ease-html-exporter.vala  ease-icon-view.vala  ease-image-actor.c  ease-image-actor.vala  ease-image-element.c  ease-image-element.vala  ease-image.c  ease-image.vala  ease-iterable-models.c  (+49 more)
ease-core/sourcelist/: source-base-group.c  source-base-group.vala  source-base-view.c  source-base-view.vala  source-expandable-group.c  source-expandable-group.vala  source-group.c  source-group.vala  source-item.c  source-item.vala  source-list.c  source-list.vala  source-number-item.c  source-number-item.vala  source-pane-view.c  source-pane-view.vala  source-spinner-item.c  source-spinner-item.vala  source-view.c  source-view.vala
examples/: build.sh
examples/Transitions/: Document.json
flutter/: Makefile.am  Makefile.in  flutter.c  flutter.h  flutter.vala
pkgconfig/: ease-core-0.4.pc.in  flutter-0.4.pc.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  es.po  fr.po  gl.po  nb.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  zh_CN.po
vapi/: ease-core-0.4.deps  ease-core-0.4.vapi  ease-core-0.5.deps  flutter-0.4.vapi
